syntax = "proto3";
package payments;

service Bitcoin {
    rpc SendPayment (BitcoinPaymentRequest) returns (BitcoinPaymentResponse);
}

message BitcoinPaymentRequest {
    string from_addr = 1;
    string to_addr = 2;
    uint32 amount = 3;
}

message BitcoinPaymentResponse {
    bool    successful = 1;
    string  message = 2;
}